<resources>
    <string name="app_name">U Sing! Studio</string>
    <string name="app_desc">sing application</string>
    <string name="loading">Loading</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="email_tag">Enter email</string>
    <string name="password">Password</string>
    <string name="password_tag">Enter password</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="new_user">New User Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Login</string>
    <string name="username">User Name</string>
    <string name="username_tag">Enter Username</string>
    <string name="create_password">Create Password</string>
    <string name="password_create_tag">Create your password</string>
    <string name="become_member">Don\'t have an account? Create one</string>
    <string name="sign_up_msg">I agree to the </string>
    <string name="terms_n_condition">Terms and Conditions</string>
    <string name="send">Send</string>
    <string name="submit">Submit</string>
    <string name="successful">Successful</string>
    <string name="done_txt">Done</string>
    <string name="continue_txt">Continue</string>
    <string name="or_txt">or</string>
    <string name="ok_txt">OK</string>
    <string name="cancel_txt">Cancel</string>
    <string name="close_txt">Close</string>
    <string name="volume_txt">Volume</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="agree_toast">Please agree to the terms and conditions</string>
    <string name="email_id_msg">Please enter email Id</string>
    <string name="email_id_invalid">Please enter valid email Id</string>
    <string name="error_msg">Error</string>
    <string name="user_error">Username cannot be empty</string>
    <string name="name_error">Name cannot be empty</string>
    <string name="email_error">Email Id cannot be empty</string>
    <string name="phone_error">Phone number cannot be empty</string>
    <string name="pass_error">Password cannot be empty</string>
    <string name="msg_error">Message cannot be empty</string>
    <string name="error_invalid_email">Invalid input for Email Id</string>
    <string name="error_invalid_phone">Invalid input for Phone Number</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_invalid_credential">Invalid input for Name</string>
    <string name="error_cannot_be_empty">Field can not be empty</string>
    <string name="welcome_desc">What would you like to do?</string>
    <string name="welcome_sing_studio">Go to U Sing! Studio</string>
    <string name="welcome_sing_music">Sing2Music &amp; W501 Music Library</string>
    <string name="welcome_vocal_booth">Go to U Sing! Studio\'s Vocal Booth</string>
    <string name="time">1 Hour ago</string>
    <string name="date">21 Oct 19</string>
    <string name="address_hint">Address</string>
    <string name="address">E 22, E Block, Sector 8\nNoida, UP(201321) </string>
    <string name="name">Name</string>
    <string name="name_hint">Kapil Rao</string>
    <string name="email_hint">demo2468@gmail.com</string>
    <string name="phone_number">9992344568</string>
    <string name="password_hint">*******</string>
    <string name="change_pass">Change Password</string>
    <string name="save">Save</string>
    <string name="old_pass_msg">Please enter old password</string>
    <string name="old_pass_invalid">Old Password is invalid</string>
    <string name="new_pass_msg">Please enter at least 6 character new password</string>
    <string name="renew_pass_msg">Please re-enter your new password</string>
    <string name="renew_pass_invalid">Field must match with new password</string>
    <string name="pass_success">Password has been changed successfully. Kindly Login Again</string>
    <string name="profile_success">Profile has been updated successfully</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="sing_music_library">Sing2Music Library</string>
    <string name="sing_music_libraryy">Music Library</string>
    <string name="all">All</string>
    <string name="piano">Piano</string>
    <string name="guitar">Guitar</string>
    <string name="total_result">About 40 results.</string>
    <string name="pianoo">Sing2Piano</string>
    <string name="guitarr">Sing2Guitar</string>
    <string name="wlibrary">W501</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="goto_menu">Go to Main Menu</string>
    <string name="recording_list">Recording List</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="article">(by Gavin Fernando, News Corp. Australia) – October 1 marks a crucial event for China — the 70th anniversary of the Communist takeover.
        Beijing has planned one of the most grand and tightly choreographed military parades in its history, all part of President Xi Jinping’s desire to showcase China as an almighty global superpower of the 21st century.  The aim is to project an image of military might and political power to the rest of the world.
        But to the country’s south, millions-strong protests in Hong Kong — sparked by a controversial extradition law — have morphed into a 17-week demonstration against the very image China is trying to project.
        In he lead-up to the 70th anniversary of Communist rule in China, fierce clashes broke out between protesters and riot police in Hong Kong this weekend. … [Note that a majority of protesters are young people who do not want to be ruled by a totalitarian state.]
        Sunday marked some of the most intense clashes in weeks as police used tear gas, rubber bullets and water cannons at multiple locations for hours during running battles with protesters hurling rocks and petrol bombs. … Police…were seen making multiple arrests throughout the day.
        The demonstrations against the Communist Chinese government are no longer confined to Hong Kong.
        Over the weekend, global rallies were staged across the world, including Australia, the US and parts of Europe, in solidarity with Hong Kong against the Communist  government of China. The global “anti-totalitarianism” rallies extended to over 60 cities worldwide including Taipei, Tokyo and Kuala Lumpur, representing growing outrage towards the Chinese government. …
    </string>
    <string name="otp">Enter OTP</string>
    <string name="sent_verification">We have sent an OTP to your Email Id</string>
    <string name="click_continue">Click to continue</string>
    <string name="resend">Resend code</string>
    <string name="expire_otp">Your code will expire in</string>
    <string name="timer_txt">2:00</string>
    <string name="congrats">Congratulations</string>
    <string name="success_register">Your account has been created successfully.</string>
    <string name="success_password">Your password has been changed successfully.</string>
    <string name="happysinging">Happy Singing !</string>
    <string name="success_passwordd">Your profile has been changed.</string>
    <string name="code_msg">Please enter verification code</string>
    <string name="code_invalid">Verification code not correct</string>
    <string name="code_expired">Verification code has been expired</string>
    <string name="old_password">Current Password</string>
    <string name="old_pass_tag">Enter your current password</string>
    <string name="new_password">New Password</string>
    <string name="new_pass_tag">Enter your new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_pass_tag">Enter again new password</string>
    <string name="confirm_pass_tagg">Enter new password again</string>
    <string name="re_enter_password">Re-Enter new password</string>
    <string name="re_enter_tag">Re-Enter your new password</string>
    <string name="reset_password">Submit</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="registered_email_id">Registered Email Id</string>
    <string name="forgot_password_msg">Password reset link has been sent to your registered email Id</string>
    <string name="forgot_password_desc">Enter your registered email address and we’ll send you a link to reset your password</string>
    <string name="reset_pass_desc">Reset your Account Password!</string>
    <string name="proceed_login">Proceed to Login</string>
    <string name="proceed_register">Proceed</string>
    <string-array name="menu_array">
        <item>Edit Profile</item>
        <item>My Subscription</item>
        <item>Go to Main Menu</item>
        <item>Change Password</item>
        <item>Logout</item>
    </string-array>
    <string-array name="menu_record_array">
        <item>Edit Profile</item>
        <item>My Subscription</item>
        <item>Go to Main Menu</item>
        <item>Recording List</item>
        <item>Change Password</item>
        <item>Logout</item>
    </string-array>
    <string name="permissionTag">Please Grant Permissions to reccord audio</string>
    <string name="enable_text">ENABLE</string>
    <string name="permissionMsg">You have denied the access permission permanently, allow the permission from setting.</string>
    <string name="record_msg">To record your voice, play the video first and then press \'Record\'</string>
    <string name="record_msgg">To record your voice, play the audio first and then press \'Record\'</string>
    <string name="important_instruction">Important Instruction</string>
    <string name="important_instructionn">Important Instructions</string>
    <string name="instruction">Keep your surroundings noise free &amp; Do not use Earphone/Headphone while recording</string>
    <string name="playback_error">Record Error</string>
    <string name="playback_msg">Song is being cued for recording.\n Please wait&#8230;</string>
    <string name="recording_done_msg">Your recording is complete and saved in the \'Recording List\'</string>
    <string name="delete_check_msg">Are you sure you want to delete this file?</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recordingg">Play</string>
    <string name="stop_recordingg">Stop</string>
    <string name="warm_up_txt">Warm up your voice anytime anywhere with</string>
    <string name="using_text">U Sing! Studio</string>
    <string name="info1">Select Desired Scale and Range</string>
    <string name="info2">Adjust Tempo</string>
    <string name="info3">Sing Your Best</string>
    <string name="get_started">Get Started</string>
    <string name="help_txt">Help</string>
    <string name="contact_support">Contact Support</string>
    <string name="help_support">U Sing! Studio\n\n
1. Before beginning your practice; select your range (Bass, Baritone, Tenor, Alto, Mezzo-Soprano, Soprano).\n\n
2. Select desired scale.\n\n
3. Adjust the playback volume accordingly to your needs.\n\n
4. Use either the built-in speakers on your device or headphones to practice along with the scales.\n\n
5. Select the menu button to switch between scale and range.\n\n
6. Go to main menu to explore W501 Music, Sing2Music Library &amp; Vocal Booth Functions\n
</string>
    <string name="speed">Speed</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="clock_hint">00:00</string>
    <string-array name="range_list">
        <item>Bass</item>
        <item>Baritone</item>
        <item>Tenor</item>
        <item>Alto</item>
        <item>Mezzo-Soprano</item>
        <item>Soprano</item>
    </string-array>
</resources>