<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/margin_10dp"
        android:background="@drawable/canvas_round_corner_black"
        android:orientation="vertical">

        <com.usingstudioo.View.NBTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_30dp"
            android:text="@string/record_msg"
            android:textColor="@color/black_translucent"
            android:textSize="@dimen/text_size_regular" />

        <com.usingstudioo.View.NLTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/important_instructionn"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_ideal" />

        <com.usingstudioo.View.NLTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/instruction"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_ideal" />

        <com.usingstudioo.View.NBButton
            android:id="@+id/btn_close"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:background="@drawable/canvas_login_btn_bg"
            android:text="@string/close_txt"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_xxlarge"
            android:textColor="@color/black" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:src="@drawable/vocal_icon"
        android:layout_marginTop="-40dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_desc"/>


</RelativeLayout>





