<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/margin_40dp"
        android:src="@drawable/infographic1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <com.usingstudioo.View.NBTextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/warm_up_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xlarge"/>

        <com.usingstudioo.View.NBTextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/using_text"
            android:textColor="@color/theme_color"
            android:textSize="28sp"/>


    </LinearLayout>


</RelativeLayout>