<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:id="@+id/item"
    android:layout_gravity="center"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/canvas_round_corner_black"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:src="@drawable/user"
            android:tint="@color/theme_color"
            android:contentDescription="@string/app_desc"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_close"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@null"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_close"
            android:tint="@color/theme_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <com.usingstudioo.View.NBTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15dp"
            android:textAllCaps="true"
            android:text="@string/old_password"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/text_size_large"/>

            <com.usingstudioo.View.NBEditText
                android:id="@+id/et_old_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:hint="@string/old_pass_tag"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/margin_5dp"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:textColorHint="@color/dim_grey"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:background="@color/theme_color"/>

            <com.usingstudioo.View.NBTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15dp"
                android:textAllCaps="true"
                android:text="@string/new_password"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/text_size_large"/>

            <com.usingstudioo.View.NBEditText
                android:id="@+id/et_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:hint="@string/new_pass_tag"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/margin_5dp"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:textColorHint="@color/dim_grey"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:background="@color/theme_color"/>

            <com.usingstudioo.View.NBTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15dp"
                android:textAllCaps="true"
                android:text="@string/confirm_password"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/text_size_large"/>

            <com.usingstudioo.View.NBEditText
                android:id="@+id/et_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:hint="@string/confirm_pass_tagg"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/margin_5dp"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:textColorHint="@color/dim_grey"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:background="@color/theme_color"/>

            <com.usingstudioo.View.NBButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginStart="@dimen/margin_25dp"
                android:layout_marginEnd="@dimen/margin_25dp"
                android:layout_marginBottom="@dimen/margin_20dp"
                android:background="@drawable/canvas_login_btn_bg"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_regular"/>

        </LinearLayout>



    </RelativeLayout>

</RelativeLayout>