<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_start_vary_10"
    android:gravity="center"
    android:id="@+id/item"
    android:layout_gravity="center"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_start_vary_10"
        android:background="@drawable/canvas_round_corner_black"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_congrats"
            android:layout_width="@dimen/margin_35dp"
            android:layout_height="@dimen/margin_35dp"
            android:layout_marginTop="@dimen/margin_start_vary_15"
            android:src="@drawable/tick"
            android:tint="@color/theme_color"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name" />
        <com.usingstudioo.View.NBTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_start_vary_20"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/congrats"
            android:layout_marginStart="@dimen/margin_start_vary_20"
            android:layout_marginEnd="@dimen/margin_start_vary_20"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/text_size_xxxlarge"/>
        <com.usingstudioo.View.NBTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/success_passwordd"
            android:layout_marginTop="@dimen/margin_start_vary_10"
            android:layout_marginStart="@dimen/margin_start_vary_20"
            android:layout_marginEnd="@dimen/margin_start_vary_20"
            android:textColor="@color/half_black"
            android:textSize="@dimen/text_size_regular"/>
        <com.usingstudioo.View.NBButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginStart="@dimen/margin_15dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_15dp"
            android:background="@drawable/canvas_login_btn_bg"
            android:layout_gravity="center"
            android:text="@string/ok_txt"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>